bk_ida/gccida/g1/int_fits_type_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4787:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4800:17: error: expected expression
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4800:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4800:61: error: expected expression
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4800:53: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4803:17: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4803:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4803:47: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4803:39: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4814:17: error: expected expression
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4814:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4814:61: error: expected expression
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
                                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4814:53: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&abstract_origin->block.vars >= *( _OWORD *)&c->block.vars ) 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4817:17: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4817:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4817:47: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/tree.c:4817:39: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                      ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_fits_type_p/src/obj/tree.o] Error 1
